# Rag-based-cover-letter---cold-email-builder

./: README.md  api.py  app.py  main.py  pyproject.toml  requirements.txt
experiments/: exp.ipynb
src/: Retrive.py  embeddingsGenerator.py  utils.py  vectorstore.py
